Todo list with Local Storage

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,7 +6,7 @@
   --gray: #d2d2d2d2;
   --light: #eee;
   --yellow: #fff700;
-  --green: rgb(13, 136, 13);
+  --green: #0d880d;
   --lime: #0f0;
   --blue: #00ff004d;
   --red: #dc1414;
